--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -58,23 +58,25 @@
                     <th class="text-center"><i class="fa fa-gear"></i></th>
                   </tr>
                 </thead>
-
-
                 <tbody *ngFor="let item of items?.records">
                   <!---->
                   <tr>
                     <!-- ข้อมูลที่จะดึงจาก services มาใส่ใน tbody นี้นะมีแบบให้แห้แหละ -->
 
                     <td>
+
                       {{item.record_id}}
                     </td>
                     <td>
+
                       {{item.record_star_date | thaidate: "medium"}}
                     </td>
                     <td>
+
                       {{item.record_end_date | thaidate: "medium"}}
                     </td>
                     <td>
+
                       {{item.record_location}}
                     </td>
 
@@ -87,21 +89,15 @@
                         <i class="fa fa-file-text-o  text-primary" style="color: black;"></i>
                       </button>&nbsp;
 
-                      
+
                       <button (click)="onRecord()" style="border: none; background: none;" class="text-primary">
                         <i class="fa fa-pencil-square-o  text-primary" style="color: black;"></i>
                       </button> &nbsp;
 
-                      <button (click)="printPDF()" style="border: none; background: none;" class="text-primary">
-                        <i class="fa fa-file-pdf-o text-primary" style="color: black;"></i>
-                      </button>&nbsp;
-
-                      <!-- <button id="theContent" (click)="printPDF()" class="btn btn-warning" style="border: none; background: none;">
-                        <i class="fa fa-file-pdf-o" style="color: black;"></i>
                       <button style="border: none; background: none;">
                         <i class="fa fa-file-pdf-o text-primary" (click)="printPDF()" style="color: black;"></i>
                         &nbsp;
-                      </button> -->
+                      </button>
                     </td>
                   </tr>
                 </tbody>
@@ -202,9 +198,46 @@
                       </div>
                     </div>
 
+                    <!-- <form action method="post" [formGroup]="addPersonalForm"> -->
+                      <div class="row inputLabel">
+                        <div class="col-sm-3">
+                          <label for="rank">ยศ/ตำแหน่ง</label>
+                        </div>
+                        <div class="col-sm-5">
+                          <label for="fullname">ชื่อ-นามสกุล</label>
+                        </div>
+                        <div class="col-md-2">
+                          <button type="button" (click)="addPersonInput()" style="border: none; background: none;">
+                            <i class="fa fa-plus"></i>
+                          </button>
+                        </div>
 
+                      </div>
+                      <!-- formArrayName="personal" -->
+                      <div >
+                        <div *ngFor="let person of addItemForm.get('personal')['controls']; let i = index" [formGroup]="addItemForm">
+                          <div class="row mx-0" [formGroup]="person" >
+                            <div class="col-sm-3">
+                              <div class="form-group">
+  
+                                <input type="text" id="rank-{{i}}" formControlName="rank" class="form-control"
+                                  placeholder="ยศ/ตำแหน่ง" />
+                              </div>
+                            </div>
+                            <div class="col-sm-5">
+                              <div class="form-group">
+  
+                                <input type="text" id="fullname-{{i}}" formControlName="fullname" class="form-control"
+                                  placeholder="--กรอกข้อมูล--" />
+                              </div>
+                            </div>
+                          </div>
 
-                    <form action method="post" [formGroup]="addPersonalForm">
+                        </div>
+
+                      </div>
+                    <!-- </form> -->
+                    <!-- <form action method="post" [formGroup]="addPersonalForm">
                       <div class="row">
 
                         <div class="col-sm-3">
@@ -239,7 +272,7 @@
 
 
                       </div>
-                    </form>
+                    </form> -->
 
                     <div class="form-group">
                       <label for="detail">รายละเอียด</label>
@@ -330,111 +363,36 @@
                       <div class="sign-content">
                         <div class="form-group">
                           <label>รายชื่อผู้รับผิดชอบ:</label>
-                          <div *ngFor="let person of items?.views"><!---->
+                          <div *ngFor="let person of items?.views; let i = index">
                             <div>
-                              <div> <!-- เพิ่มปุ่มอัพโหลดรูปภาพและแสดงภาพที่อัพโหลด -->
-                                <i class="fa fa-upload" style="font-size:24px; cursor: pointer;"
-                                  (click)="uploadImage()"></i>
-                                <input type="file" id="image-upload" (change)="onFileChange($event)" accept="image/*"
-                                  style="display: none;">
-                                <img [src]="uploadedImageUrl" alt="Uploaded Image" *ngIf="uploadedImageUrl"
-                                  style="max-width: 100px; max-height: 100px; display: block; margin-top: 10px;">
+                              <div>
+                                <i class="fa fa-upload" style="font-size:24px; cursor: pointer;" (click)="uploadImage(i)" *ngIf="!isLoading[i]"></i>
+                                <input type="file" id="image-upload-{{i}}" (change)="onFileChange($event, i)" accept="image/*" style="display: none;">
+                                <img [src]="uploadedImages[i]" alt="Uploaded Image" *ngIf="uploadedImages[i]" style="max-width: 100px; max-height: 100px; display: block; margin-top: 10px;">
                               </div>
-                              <!-- <img [src]="documentImageUrl" alt="A4 Document"> อย่าลบนะอันนี้นะ สำหรับ test รูป -->
                             </div>
-
+                      
                             <p>{{ person.view_rank }} &nbsp; &nbsp; {{ person.view_full_name }}</p>
-
                           </div>
                         </div>
-
                       </div>
-
 
                     </div>
                   </form>
                   <!-- <div class="right-panel">
-                  <form action="">
-                    <div class="right-panelOnTop">
-                
-                    </div>
+                    <form action="">
+                      <div class="right-panelOnTop">
+                  
+                      </div>
 
-                   
+                     
 
 
-                  </form>
-                </div> -->
+                    </form>
+                  </div> -->
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-success pull-center" (click)="printPDF()">
-                    <i class="fa fa-check"></i>&nbsp; ยืนยัน
-                  </button>
-                  <button type="button" class="btn btn-danger" data-dismiss="modal">
-                    <i class="fa fa-times"></i>&nbsp; ปิด
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--land Insert end here-->
-          <!-- รายละเอียด-->
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-              <div class="modal-content">
-                <div class="modal-header" style="background: rgb(255, 209, 0)">
-                  <h5 class="modal-title" id="myModalLabel" style="color: white;">รายละเอียด</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body-detail" [ngStyle]="{ width: '60%', height: '297mm' }">
-                  <!-- เนื้อหาของป๊อปอัพ -->
-                  <form action method="get">
-                    <div *ngFor="let item of itemsTest" class="left-panel">
-                      <div class="form-group">
-                        <label>ครั้งที่:</label>
-                        <p>{{ item.id }}</p>
-                      </div>
-                      <div class="form-group">
-                        <label>วันที่เริ่มตรวจสอบ:</label>
-                        <p>{{ item.startDate | date: 'd/M/yyyy' }}</p>
-                      </div>
-                      <div class="form-group">
-                        <label>วันที่เสร็จสิ้น:</label>
-                        <p>{{ item.endDate | date: 'd/M/yyyy' }}</p>
-                      </div>
-                      <div class="form-group">
-                        <label>หัวข้อการตรวจสอบ:</label>
-                        <p>{{ item.topic }}</p>
-                      </div>
-                      <div class="form-group">
-                        <label>รายละเอียด:</label>
-                        <p>{{ item.detail }}</p>
-                      </div>
-                      <div class="form-group">
-                        <label>สถานที่</label>
-                        <p>{{ item.location }}</p>
-                      </div>
-                      <div class="form-group">
-                        <label>รายชื่อผู้รับผิดชอบ:</label>
-                        <div *ngFor="let person of item.responsiblePeople">
-                          <p>{{ person.rank }} &nbsp; : &nbsp; {{ person.name }}</p>
-                        </div>
-                      </div>
-                    </div>
-                  </form>
-                  <div class="right-panel">
-                    <img [src]="documentImageUrl" alt="A4 Document">
-                  </div>
-                </div>
-                <div class="modal-footer">
-                  <button id="theContent" (click)="printPDF()" class="btn btn-warning"
-                    style="border: none; background: none;">
-                    <i class="fa fa-file-pdf-o" style="color: black;"></i>
-                    &nbsp;
-                  </button>
-                  <button type="button" class="btn btn-success pull-center" (click)="detailCommit()">
                     <i class="fa fa-check"></i>&nbsp; ยืนยัน
                   </button>
                   <button type="button" class="btn btn-danger" data-dismiss="modal">
@@ -643,7 +601,7 @@
                     </tbody>
                   </table>
                 </div>
-              </div>
+              </div>x
             </div>
           </div>
         </div>
