--- a/src/app/view/profile/profile.component.css
+++ b/src/app/view/profile/profile.component.css
@@ -9,6 +9,9 @@
 h4{
   font-family: 'sarabun',sans-serif;
   font-weight: 900;
+  display: flex;
+  align-items: center;
+  margin: 0;
 }
 
 
@@ -132,6 +135,12 @@ i{
   align-items: center;
   padding-left: 60px;
 }
+:host ::ng-deep .EditModal-content .col-md-3{
+  display: flex;
+  align-items: center;
+  padding: 15px;
+}
+
 .title{
   display: flex;
   padding: 10px;
@@ -287,6 +296,32 @@ justify-content: center;
   width: 500px;
   height: 450px;
   position: relative;
+}
+
+.EditModal-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1095;
+}
+
+.EditModal-content {
+  position: relative;
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 500px;
+  height: 650px;
+
+}
+.no-scroll {
+  overflow: hidden;
 }
 
 
