--- a/src/app/view/manageuser/addperson/addperson.component.html
+++ b/src/app/view/manageuser/addperson/addperson.component.html
@@ -74,12 +74,10 @@
               <div class="row">
                 <div class="col-sm-6">
                   <div class="form-group">
-                    <label for="organization" style="font-size: 16px;">องค์กร / หน่วยงาน</label>
-                    <input type="text" id="organization" formControlName="organization" required placeholder="กรอกชื่อของคุณ">
-                    <div
-                      *ngIf="regisForm.get('organization')?.invalid && (regisForm.get('organization')?.touched || regisForm.get('organization')?.dirty)">
-                      <small class="error-text">กรุณากรอกข้อมูล**</small>
-                    </div>
+                    <label for="organization">องค์กร / หน่วยงาน</label>
+                    <select id="organization" formControlName="organization" class="form-control">
+                      <option *ngFor="let org of organization" [value]="org.agency_name">{{ org.agency_name }}</option>
+                    </select>
                   </div>
                 </div>
                 <div class="col-sm-6" style="padding-right: 0;">
