--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -183,7 +183,6 @@
               </div>
             </div>
           </div>
-          
           <div class="col-md-3" *ngIf="isSuperAdmin">
             <div class="card Box4">
               <div class="card-body">
@@ -199,10 +198,10 @@
               </div>
             </div>
           </div>
+        </div>
+
       
-
-
-      <div class="content-dashboard">
+      <!-- <div class="content-dashboard"> -->
         <div class="row">
           <div class="col-sm-8">
 
@@ -233,10 +232,7 @@
           </div>
 
         </div>
-
-
-
-      </div>
+      <!-- </div> -->
     </div>
 
   </div>
