--- a/src/app/view/manageuser/agency-member/agency-member.component.css
+++ b/src/app/view/manageuser/agency-member/agency-member.component.css
@@ -19,6 +19,66 @@
     font-weight: 900;
     font-size: 18px;
   }
+
+  
+  /*Modal style*/
+ 
+.box:focus-within{
+  background-color: #f1f5ff;
+  border-radius: 5px;
+}
+.form-group {
+  margin-bottom: 15px;
+  text-align: left;
+  font-family: 'Sarabun', sans-serif;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+}  
+
+.form-group input {
+  display: block;
+  width: calc(100% - 0px);
+  padding: 8px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+}
+.form-select{
+  width: calc(100% - 0px);
+  padding: 8px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+  color:#5b5a5a;
+}
+
+
+.form-select:disabled {
+  background-color: #ccc; /* Light gray color for disabled state */
+  cursor: not-allowed; /* Show a 'not-allowed' cursor when hovering over the disabled select */
+}
+:host ::ng-deep .form-control{
+  background-image: linear-gradient(to top, #000000 2px, rgba(156, 39, 176, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px);
+}
+
+/*invalidate style*/
+.error-text{
+      font-size: 14px;
+      font-family: 'Sarabun', sans-serif;
+      color: red;
+}
+.form-group input.box-validate {
+      border: 1px solid red;
+      border-radius: 5px;
+}
+
   
 
 
@@ -49,3 +109,56 @@
   :host ::ng-deep .table.dataTable>thead .sorting:after, table.dataTable>thead .sorting_asc:after, table.dataTable>thead .sorting_desc:after, table.dataTable>thead .sorting_asc_disabled:after, table.dataTable>thead .sorting_desc_disabled:after {
     display: none;
   }
+
+  :host ::ng-deep .dataTables_wrapper .dataTables_paginate .paginate_button {
+    box-sizing: border-box;
+    display: inline-block;
+    min-width: 1.5em;
+    padding: 2px !important;
+    margin-left: 2px;
+    text-align: center;
+    text-decoration: none !important;
+    cursor: pointer;
+    color: inherit !important;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    background: transparent;
+  }
+  
+  :host ::ng-deep .page-link {
+    position: relative;
+    display: block;
+    padding: 0.5rem 0.75rem;
+    margin-left: 0;
+    line-height: 1.25;
+    color: #000000;
+    background-color: white; /*rgb(255, 219, 61)*/
+    border: 0 solid #dee2e6;
+    font-family: 'Sarabun', sans-serif;
+    opacity: 0.9;
+  }
+  
+  :host ::ng-deep .page-link:hover {
+    position: relative;
+    display: flex;
+    padding: 0.5rem 0.75rem;
+    margin-left: 0;
+    line-height: 1.25;
+    color: black;
+    background-color: rgb(255, 219, 61);
+    border: 0 solid #dee2e6;
+    box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 244, 54, 0.4);
+    font-family: 'Sarabun', sans-serif;
+    opacity: 1;
+  }
+  
+  :host ::ng-deep .page-item.active .page-link {
+    z-index: 3;
+    color: black;
+    background-color: rgb(255, 209, 0);
+    border-color: rgb(232, 189, 0);
+    border-radius: 3px;
+    box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 244, 54, 0.4);
+    opacity: 1;
+  }
+  
